using Entities.Models;

namespace Contracts.Interfaces
{
    public interface IProjectRepository : IRepositoryBase<Project>
    {
    }
}
